--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,39 +29,27 @@ dist.jar=${dist.dir}/CatatIn.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-collections4-4.4.jar=C:\\Users\\MyBook Z Series\\Downloads\\commons-collections4-4.4.jar
-file.reference.commons-collections4-4.4.jar-1=C:\\Users\\MyBook Z Series\\Downloads\\library\\commons-collections4-4.4.jar
-file.reference.commons-compress-1.26.1.jar=C:\\Users\\MyBook Z Series\\Downloads\\commons-compress-1.26.1.jar
-file.reference.commons-compress-1.26.1.jar-1=C:\\Users\\MyBook Z Series\\Downloads\\library\\commons-compress-1.26.1.jar
-file.reference.itextpdf-5.5.13.3.jar=C:\\Users\\MyBook Z Series\\Downloads\\itextpdf-5.5.13.3.jar
-file.reference.jcalendar-1.4.jar=../../../../../../../Downloads/jcalendar-1.4/lib/jcalendar-1.4.jar
-file.reference.mysql-connector-j-9.5.0.jar=C:\\Users\\MyBook Z Series\\OneDrive\\Dokumen\\TUGAS MATA KULIAH\\SEMESTER 3\\PBO\\TUGAS PBO\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
-file.reference.poi-5.2.5.jar=C:\\Users\\MyBook Z Series\\Downloads\\poi-5.2.5.jar
-file.reference.poi-5.2.5.jar-1=C:\\Users\\MyBook Z Series\\Downloads\\library\\poi-5.2.5.jar
-file.reference.poi-ooxml-5.2.5.jar=C:\\Users\\MyBook Z Series\\Downloads\\poi-ooxml-5.2.5.jar
-file.reference.poi-ooxml-5.2.5.jar-1=C:\\Users\\MyBook Z Series\\Downloads\\library\\poi-ooxml-5.2.5.jar
-file.reference.poi-ooxml-lite-5.2.5.jar=C:\\Users\\MyBook Z Series\\Downloads\\poi-ooxml-lite-5.2.5.jar
-file.reference.poi-ooxml-lite-5.2.5.jar-1=C:\\Users\\MyBook Z Series\\Downloads\\library\\poi-ooxml-lite-5.2.5.jar
-file.reference.xmlbeans-5.1.1.jar=C:\\Users\\MyBook Z Series\\Downloads\\xmlbeans-5.1.1.jar
-file.reference.xmlbeans-5.1.1.jar-1=C:\\Users\\MyBook Z Series\\Downloads\\library\\xmlbeans-5.1.1.jar
+file.reference.commons-collections4-4.4.jar=lib/commons-collections4-4.4.jar
+file.reference.commons-compress-1.26.1.jar=lib/commons-compress-1.26.1.jar
+file.reference.itextpdf-5.5.13.3.jar=lib/itextpdf-5.5.13.3.jar
+file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
+file.reference.mysql-connector-j-9.5.0.jar=lib/mysql-connector-j-9.5.0.jar
+file.reference.poi-5.2.5.jar=lib/poi-5.2.5.jar
+file.reference.poi-ooxml-5.2.5.jar=lib/poi-ooxml-5.2.5.jar
+file.reference.poi-ooxml-lite-5.2.5.jar=lib/poi-ooxml-lite-5.2.5.jar
+file.reference.xmlbeans-5.1.1.jar=lib/xmlbeans-5.1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mysql-connector-j-9.5.0.jar}:\
     ${file.reference.commons-collections4-4.4.jar}:\
     ${file.reference.commons-compress-1.26.1.jar}:\
     ${file.reference.itextpdf-5.5.13.3.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-j-9.5.0.jar}:\
     ${file.reference.poi-5.2.5.jar}:\
     ${file.reference.poi-ooxml-5.2.5.jar}:\
     ${file.reference.poi-ooxml-lite-5.2.5.jar}:\
-    ${file.reference.xmlbeans-5.1.1.jar}:\
-    ${file.reference.commons-collections4-4.4.jar-1}:\
-    ${file.reference.commons-compress-1.26.1.jar-1}:\
-    ${file.reference.poi-5.2.5.jar-1}:\
-    ${file.reference.poi-ooxml-5.2.5.jar-1}:\
-    ${file.reference.poi-ooxml-lite-5.2.5.jar-1}:\
-    ${file.reference.xmlbeans-5.1.1.jar-1}
+    ${file.reference.xmlbeans-5.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
